fix css, upgrade vue-cropper version

--- a/ui/src/style/vars.less
+++ b/ui/src/style/vars.less
@@ -259,7 +259,7 @@ a {
     .ant-menu-item,
     .ant-menu-submenu-title {
       left: 0;
-      padding: 0 32px !important;
+      padding: 0 30px !important;
       text-overflow: clip;
       margin-right: 10px;
 
@@ -400,4 +400,8 @@ a {
 
 .ant-list-item-meta-content {
   width: auto;
+}
+
+.ant-select-arrow .anticon {
+  vertical-align: top;
 }
